--- a/changelog
+++ b/changelog
@@ -10,6 +10,7 @@ samba (3.0.14a-7) UNRELEASED; urgency=low
       Closes: #332088.
   * Noèl Köthe
     - corrected libsmbclient priority to optional. Closes: #310045
+    - corrected the path of ServerType.html in smb.conf. Closes: #296500
 
  -- Steve Langasek <vorlon@debian.org>  Sat, 13 Aug 2005 17:04:40 -0700
 
