--- a/changelog
+++ b/changelog
@@ -15,6 +15,7 @@ samba (3.0.14a-7) UNRELEASED; urgency=low
     - added homepage to description
     - switched init scripts (samba and winbind) to lsb-functions
       (took patches from ubuntu)
+    - added Swedish. Closes: #331437
 
  -- Steve Langasek <vorlon@debian.org>  Sat, 13 Aug 2005 17:04:40 -0700
 
