--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-samba (3.0.14a-7) UNRELEASED; urgency=low
+samba (3.0.20b-1) UNRELEASED; urgency=low
 
   * Christian Perrier:
     - Debconf translations:
@@ -16,6 +16,8 @@ samba (3.0.14a-7) UNRELEASED; urgency=low
     - switched init scripts (samba and winbind) to lsb-functions
       (took patches from ubuntu)
     - added Swedish. Closes: #331437
+    - new upstream release 3.0.20b (from 2005-10-13). Closes: #324515
+      . Mac OS Tiger Problem fixed. Closes: #309836
 
  -- Steve Langasek <vorlon@debian.org>  Sat, 13 Aug 2005 17:04:40 -0700
 
