--- a/changelog
+++ b/changelog
@@ -21,6 +21,9 @@ samba (3.0.20b-1) UNRELEASED; urgency=low
       . testprns removed by upstream so removed in samba.files
       . corrected docs/*.pdf names (samba-doc.docs)
       . corrected diagnosis.html path (samba.docs)
+      . removing patches which are included upstream:
+        dos7-xcopy-always-copies-files.patch
+           (* BUG 2622: Remove DPTR_MASK as it makes no sense.)
 
  -- Steve Langasek <vorlon@debian.org>  Sat, 13 Aug 2005 17:04:40 -0700
 
