--- a/changelog
+++ b/changelog
@@ -16,6 +16,8 @@ samba (3.0.20b-1) UNRELEASED; urgency=low
     - switched init scripts (samba and winbind) to lsb-functions
       (took patches from ubuntu)
     - added Swedish. Closes: #331437
+    - removed outdated "guest" value in "passdb backend" in default smb.conf
+      Closes: #289519
     - new upstream release 3.0.20b (from 2005-10-13). Closes: #324515
       . Mac OS Tiger Problem fixed. Closes: #309836
       . BUG 2688: re-implement support for the -P (--port) option. Closes: #307746
