--- a/changelog
+++ b/changelog
@@ -21,6 +21,7 @@ samba (3.0.20b-1) UNRELEASED; urgency=low
     - new upstream release 3.0.20b (from 2005-10-13). Closes: #324515
       . Mac OS Tiger Problem fixed. Closes: #309836
       . BUG 2688: re-implement support for the -P (--port) option. Closes: #307746
+      . "man smb.conf" warnings fixed. Closes: #266320
       . testprns removed by upstream so removed in samba.files
       . corrected docs/*.pdf names (samba-doc.docs)
       . corrected diagnosis.html path (samba.docs)
