--- a/changelog
+++ b/changelog
@@ -19,6 +19,7 @@ samba (3.0.20b-1) UNRELEASED; urgency=low
     - removed outdated "guest" value in "passdb backend" in default smb.conf
       Closes: #289519
     - new upstream release 3.0.20b (from 2005-10-13). Closes: #324515
+      . support for Windows Vista. Closes: #323489
       . Mac OS Tiger Problem fixed. Closes: #309836
       . BUG 2688: re-implement support for the -P (--port) option. Closes: #307746
       . "man smb.conf" warnings fixed. Closes: #266320
