--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-samba (3.0.20b-1) UNRELEASED; urgency=low
+samba (3.0.20b-1) unstable; urgency=low
 
   * Christian Perrier:
     - Debconf translations:
