--- a/changelog
+++ b/changelog
@@ -7,6 +7,7 @@ samba (3.0.20b-3) UNRELEASED; urgency=low
   * Noèl Köthe:
     - libpam-smbpass dependency on samba-common
       Closes: #297923
+    - updated swedish debconf translation. Closes: #335784
 
  -- Steve Langasek <vorlon@debian.org>  Sun, 23 Oct 2005 00:50:33 -0700
 
