Added doc-base support. Closes: #55580
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@770 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -8,6 +8,8 @@ samba (3.0.20b-3) UNRELEASED; urgency=low
     - libpam-smbpass dependency on samba-common
       Closes: #297923
     - updated swedish debconf translation. Closes: #335784
+  * Peter Eisentraut
+    - Added doc-base support. Closes: #55580
 
  -- Steve Langasek <vorlon@debian.org>  Sun, 23 Oct 2005 00:50:33 -0700
 
