Added Recommends: smbldap-tools. Closes: #227675
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@771 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -7,7 +7,8 @@ samba (3.0.20b-3) UNRELEASED; urgency=low
   * Noèl Köthe:
     - libpam-smbpass dependency on samba-common
       Closes: #297923
-    - updated swedish debconf translation. Closes: #335784
+    - Updated swedish debconf translation. Closes: #335784
+    - Added Recommends: smbldap-tools. Closes: #227675
   * Peter Eisentraut
     - Added doc-base support. Closes: #55580
 
