--- a/changelog
+++ b/changelog
@@ -1,27 +1,29 @@
 samba (3.0.20b-3) UNRELEASED; urgency=low
 
   [ Steve Langasek ]
-  * Steve Langasek:
-    - Drop the FHS transition code from the samba postinst, since it's
-      not needed for upgrades from sarge (and most of it not for upgrades
-      from woody).
-  * Noèl Köthe:
-    - libpam-smbpass dependency on samba-common
-      Closes: #297923
-    - Updated swedish debconf translation. Closes: #335784
-    - Added Recommends: smbldap-tools. Closes: #227675
-  * Peter Eisentraut
-    - Added doc-base support. Closes: #55580
-    - Fixed dh_installexamples call so the debian/*.examples files are
-      actually used.
-    - Patched libpam-smbpass README to refer to examples directory.
-      Closes: #215771
+  * Drop the FHS transition code from the samba postinst, since it's
+    not needed for upgrades from sarge (and most of it not for upgrades
+    from woody).
+
+  [ Noèl Köthe ]
+  * libpam-smbpass dependency on samba-common
+    Closes: #297923
+  * Updated swedish debconf translation. Closes: #335784
+  * Added Recommends: smbldap-tools. Closes: #227675
+
+  [ Peter Eisentraut ]
+  * Added doc-base support. Closes: #55580
+  * Fixed dh_installexamples call so the debian/*.examples files are
+    actually used.
+  * Patched libpam-smbpass README to refer to examples directory.
+    Closes: #215771
 
   [ Christian Perrier ]
   * Add a working passwd chat line to the default smb.conf file
     Closes: #269746
+  * Add the profiles binary and man page to the shipped files. Closes: #225494
 
- -- Christian Perrier <bubulle@debian.org>  Sat,  5 Nov 2005 14:16:09 +0100
+ -- Christian Perrier <bubulle@debian.org>  Fri, 18 Nov 2005 19:49:06 +0100
 
 samba (3.0.20b-2) unstable; urgency=low
 
