Remove the extraneous COPYING file provided in samba-doc
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@784 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -30,6 +30,7 @@ samba (3.0.20b-3) unstable; urgency=low
   * Corrected FSF address in debian/copyright
   * Make swat depend on netbase as it uses update-inetd in its postinst script
   * Correct shebang lines in config scripts
+  * Remove an extra copy of the GPL in smbldap-tool examples in samba-doc
 
  -- Christian Perrier <bubulle@debian.org>  Sat,  3 Dec 2005 07:30:40 +0100
 
