Source confmodule in swat.postinst to guarantee that the config script is run in all situations
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@788 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -35,6 +35,8 @@ samba (3.0.20b-3) unstable; urgency=low
     - Remove an extra copy of the GPL in smbldap-tool examples in samba-doc
     - Minor correction in libsmbclient-dev description to avoid strictly
       repeating the short description in the long description
+    - Call confmodule in swat.postinst as this is the only way to guarantee
+      that the config script is run in all cases
 
  -- Christian Perrier <bubulle@debian.org>  Sat,  3 Dec 2005 07:30:40 +0100
 
