Open new changelog entry
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@791 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+samba (3.0.20b-4) UNRELEASE; urgency=low
+
+  * 
+
+ -- Christian Perrier <bubulle@debian.org>  Sun,  4 Dec 2005 15:19:50 +0100
+
 samba (3.0.20b-3) unstable; urgency=low
 
   [ Steve Langasek ]
