Do not include smbldap-tools-* in samba-doc and explain in the (patched) README of the LDAP directory that they exist as a separate package in Debian.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@793 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -1,8 +1,9 @@
 samba (3.0.20b-4) UNRELEASED; urgency=low
 
-  * 
+  * Remove the smbldap-tools-* directory from the examples of samba-doc
+    as these tools exist as an independent package. Closes: #341934
 
- -- Christian Perrier <bubulle@debian.org>  Sun,  4 Dec 2005 15:19:50 +0100
+ -- Christian Perrier <bubulle@debian.org>  Sun,  4 Dec 2005 19:03:33 +0100
 
 samba (3.0.20b-3) unstable; urgency=low
 
