--- a/changelog
+++ b/changelog
@@ -2,6 +2,7 @@ samba (3.0.20b-4) UNRELEASED; urgency=low
 
   * Remove the smbldap-tools-* directory from the examples of samba-doc
     as these tools exist as an independent package. Closes: #341934
+  * Swedish debconf translation update. Closes: #342022
 
  -- Christian Perrier <bubulle@debian.org>  Sun,  4 Dec 2005 19:03:33 +0100
 
