--- a/changelog
+++ b/changelog
@@ -6,13 +6,14 @@ samba (3.0.20b-4) UNRELEASED; urgency=low
   * Swedish debconf translation update. Closes: #342022
   * Preserve the local admin settings for run_mode in /etc/default/samba
     when upgrading. Closes: #234038, #267988, #269735
+  * Winbind also must depend on lsb-base. Closes: #343379
 
   [ Peter Eisentraut ]
   * Added separate samba-doc-pdf package. Closes: #281971
   * Removed duplicate documentation in swat package, symlinked to
     samba-doc; swat now depends on samba-doc. Closes: #233447
 
- -- Christian Perrier <bubulle@debian.org>  Sun, 11 Dec 2005 09:46:58 +0100
+ -- Christian Perrier <bubulle@debian.org>  Thu, 15 Dec 2005 22:54:16 +0100
 
 samba (3.0.20b-3) unstable; urgency=low
 
