samba-doc-pdf suggested by samba-doc
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@801 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -11,7 +11,8 @@ samba (3.0.20b-4) UNRELEASED; urgency=low
     uninstalling. Closes: #87905, #230936, #268429
 
   [ Peter Eisentraut ]
-  * Added separate samba-doc-pdf package. Closes: #281971
+  * Added separate samba-doc-pdf package, suggested by samba-doc.
+    Closes: #281971
   * Removed duplicate documentation in swat package, symlinked to
     samba-doc; swat now depends on samba-doc. Closes: #233447
 
