Open a new changelog entry and really make samba-doc suggest samba-doc-pdf
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@805 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+samba (3.0.20b-5) UNRELEASED; urgency=low
+
+  * *Really* make samba-doc suggest samna-doc-pdf. This change finally
+    did not make it in the previous release.
+
+ -- Christian Perrier <bubulle@debian.org>  Tue, 20 Dec 2005 23:30:08 +0100
+
 samba (3.0.20b-4) unstable; urgency=low
 
   [ Christian Perrier ]
