added new smbclient programm smbget
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@808 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -7,6 +7,8 @@ samba (3.0.21-1) UNRELEASED; urgency=low
   [ Noèl Köthe ]
   * new upstream release 3.0.21
     - removed smbsh.1 from debian/rules
+    - added new smbclient programm smbget (with conflict/replace
+      to existing Debian smbget)
     - fixed "cd command fails in smbclient". Closes: #307535
     - fixed "file descriptor leak". Closes: #339564
     - fixed "smbclient(1) doesn't list same options as
