--- a/changelog
+++ b/changelog
@@ -12,6 +12,8 @@ samba (3.0.21-1) UNRELEASED; urgency=low
     - added libsmbclient.8 to libsmbclient package
     - added umount.cifs.8 to smbfs package
     - added pam_winbind.8 to winbind package
+    - added new /usr/bin/eventlogadm to samba package which is
+      documented here http://www.samba.org/~jerry/Samba-EventLog-HOWTO.txt
     - fixed "cd command fails in smbclient". Closes: #307535
     - fixed "file descriptor leak". Closes: #339564
     - fixed "smbclient(1) doesn't list same options as
