added tdbdump and tdbtool to samba package
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@813 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -8,7 +8,9 @@ samba (3.0.21-1) UNRELEASED; urgency=low
   * new upstream release 3.0.21
     - removed smbsh.1 from debian/rules
     - added new smbclient programm smbget (with conflict/replace
-      to existing Debian smbget)
+      to existing Debian smbget package)
+    - added tdbdump and tdbtool to samba package (with conflict/replace
+      to existing Debian tdb-tools package) because tdb-tools are outdated.
     - added libsmbclient.8 to libsmbclient package
     - added umount.cifs.8 to smbfs package
     - added pam_winbind.8 to winbind package
