--- a/changelog
+++ b/changelog
@@ -27,8 +27,9 @@ samba (3.0.21a-1) UNRELEASED; urgency=low
     - fixed "fails to manage groups containing spaces". Closes: #299592
     - added myself to Uploaders
   * Rewording of the panic action script. Closes: #335051
+  * added missing swat translation to swat package
 
- -- Noèl Köthe <noel@debian.org>  Wed, 21 Dec 2005 11:34:44 +0100
+ -- Noèl Köthe <noel@debian.org>  Sun, 01 Jan 2006 12:45:33 +0100
 
 samba (3.0.20b-4) unstable; urgency=low
 
