open new changelog entry
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@825 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+samba (3.0.21a-2) UNRELEASED; urgency=low
+
+  *
+
+ -- Noèl Köthe <noel@debian.org>  Sun, 01 Jan 2006 16:45:33 +0100
+
 samba (3.0.21a-1) unstable; urgency=low
 
   [ Christian Perrier ]
