--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
+
+  * First upload to Debian main.
+  * Remove a few unused files in the packaging.
+
+ -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 14:19:43 +0100
+
 samba (3.9.0+SVN12395-1) unstable; urgency=low
 
   * New snapshot, drop 4 suffix
