--- a/changelog
+++ b/changelog
@@ -2,8 +2,10 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
 
   * First upload to Debian main.
   * Remove a few unused files in the packaging.
+  * Rename samba-server package to just samba, for consistency with the
+    Samba 3 packaging.
 
- -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 14:19:43 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 14:37:59 +0100
 
 samba (3.9.0+SVN12395-1) unstable; urgency=low
 
