Start of Samba 3 migration work: Copy upgrade script into /usr/lib/samba/setup.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@835 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -9,8 +9,10 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
   * Change SOURCEPATH in debian/rules to reflect that we now have the
     packaging in debian/, not packaging/debian/. This will have to be reverted
     whenever upstream syncs with us.
+  * Attempt to upgrade from Samba 3 if that's what the user tries to do.
+    * Copy upgrade script into /usr/lib/samba/setup.
 
- -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 14:52:52 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 15:19:55 +0100
 
 samba (3.9.0+SVN12395-1) unstable; urgency=low
 
