Continue Samba 3 upgrade work: Add (untested) upgrade code to postinst.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@839 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -11,6 +11,8 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
     whenever upstream syncs with us.
   * Attempt to upgrade from Samba 3 if that's what the user tries to do.
     * Copy upgrade script into /usr/lib/samba/setup.
+    * Check for upgrade from << 3.9.0 in postinst, and upgrade if the user
+      wished to.
   * Run "make quicktest" on build.
   * Only provision in samba.postinst if we're being called with "configure".
 
