--- a/changelog
+++ b/changelog
@@ -11,12 +11,14 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
     whenever upstream syncs with us.
   * Attempt to upgrade from Samba 3 if that's what the user tries to do.
     * Copy upgrade script into /usr/lib/samba/setup.
+    * Check for upgrade from << 3.9.0 in config, and ask the user for upgrade
+      if relevant.
     * Check for upgrade from << 3.9.0 in postinst, and upgrade if the user
       wished to.
   * Run "make quicktest" on build.
   * Only provision in samba.postinst if we're being called with "configure".
 
- -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 15:19:55 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 15:55:14 +0100
 
 samba (3.9.0+SVN12395-1) unstable; urgency=low
 
