--- a/changelog
+++ b/changelog
@@ -21,9 +21,10 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
   * Change debhelper compatibility level to 5.
   * Remove leftover, unused init.d script from debmake.
   * Don't give --pidfile to start-stop-daemon when stopping -- current
-    versions of Samba 4 won't die when the parent is killed. 
+    versions of Samba 4 won't die when the parent is killed.
+  * Removed debmake comment from debian/rules, it's hardly relevant any more. 
 
- -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 22:44:04 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 22:45:16 +0100
 
 samba (3.9.0+SVN12395-1) unstable; urgency=low
 
