--- a/changelog
+++ b/changelog
@@ -27,8 +27,9 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
   * Removed debmake comment from debian/rules, it's hardly relevant any more.
   * Support purging properly in postrm, both for samba and samba-common
     (adapted from the Samba 3 packaging).
+  * Copied Uploaders: line from Samba 3 packaging, adding myself.
 
- -- Steinar H. Gunderson <sesse@debian.org>  Tue,  3 Jan 2006 23:13:28 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Wed,  4 Jan 2006 01:50:11 +0100
 
 samba (3.9.0+SVN12395-1) unstable; urgency=low
 
