--- a/changelog
+++ b/changelog
@@ -28,6 +28,7 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
   * Support purging properly in postrm, both for samba and samba-common
     (adapted from the Samba 3 packaging).
   * Copied Uploaders: line from Samba 3 packaging, adding myself.
+  * Updated README.debian somewhat, and renamed to use a capital D.
 
  -- Steinar H. Gunderson <sesse@debian.org>  Wed,  4 Jan 2006 01:50:11 +0100
 
