--- a/changelog
+++ b/changelog
@@ -17,7 +17,7 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
       if relevant.
     * Check for upgrade from << 3.9.0 in postinst, and upgrade if the user
       wished to.
-  * Only provision in samba.postinst if we're being called with "configure".
+  * Only provision in samba.postinst if we're doing a fresh install.
   * Make samba-client Replaces/Conflicts smbclient.
   * Rename samba-swat to swat, and add a dependency from swat to samba.
   * Change debhelper compatibility level to 5.
